Project metadata modal dialog is not fixed width in IE - width overflows out of screen #94

--- a/src/css/components/modal.styl
+++ b/src/css/components/modal.styl
@@ -1,4 +1,6 @@
 .pp-modal {
+    max-width: 50%;
     margin-left: 25%;
     margin-right: 25%;
+    boz-sizing: border-box;
 }
